# web

./: LICENSE  Makefile  assignments.md  calendar.md  grades.md  index.md  lectures.md  resources.md  site.hs  staff.md  web.cabal
css/: default.css  syntax.css
docs/: assignments.html  calendar.html  grades.html  index.html  lectures.html  resources.html  staff.html
docs/css/: default.css  syntax.css
docs/lectures/: 01-introduction.html  02-haskell.html  03-adder-quizzes.html  03-adder.html  04-boa.html  05-cobra.html  06-diamond.html  07-egg-eater.html  08-fer-de-lance.html  09-garter.html  closures.html
lectures/: 01-introduction.md  02-haskell.md  03-adder-quizzes.md  05-cobra.md  closures.md
static/hs/: lecture1.hs  sat.hs
templates/: default.html
