name:                web
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/value/web#readme
license:             BSD3
license-file:        LICENSE
author:              value
maintainer:          value
copyright:           value
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable web
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
